# reddit-cli

./: README.md  pyproject.toml
reddit_cli/: api.py  app.py  main.py  subreddits.py  translate.py
