[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-cli"
version = "0.2.0"
description = "Reddit real-time feed in your terminal, with Chinese translation"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",
    "textual>=0.47",
    "click>=8.0",
    "deep-translator>=1.11",
]

[project.scripts]
reddit = "reddit_cli.main:main"

[project.urls]
Homepage = "https://github.com/yourname/reddit-cli"
